<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_global"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:gravity="center"
            android:text="@string/main_activity"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/Welcome_Image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            app:srcCompat="@drawable/ic_launcher_foreground"
            android:textAlignment="center" />

        <Button
            android:id="@+id/SignIn_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="signIn"
            android:text="@string/SignIn_activity"
            android:textAlignment="center" />

        <Button
            android:id="@+id/SignUp_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="signUp"
            android:text="@string/SignUp_activity"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>